--- a/css/style.css
+++ b/css/style.css
@@ -202,6 +202,10 @@ tr .table-center{
     opacity: 1;
 }
 
+.contractor-group{
+    display: none;
+}
+
 footer{
     margin: 15px;
     padding: 15px;
